--- a/FoxFanDownloader/Views/Controls/SeasonDisplayer.xaml
+++ b/FoxFanDownloader/Views/Controls/SeasonDisplayer.xaml
@@ -3,8 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d"            
-             Background="White" d:DesignWidth="400" Height="37">
+             xmlns:vm="clr-namespace:FoxFanDownloader.ViewModels" 
+             mc:Ignorable="d"   
+             BorderBrush="Transparent"
+             d:DataContext="{d:DesignInstance Type=vm:SeasonsInfo, IsDesignTimeCreatable=False}"
+             Background="White" d:DesignWidth="400">
     <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
         <StackPanel.Resources>
             <Style TargetType="Label">
@@ -14,16 +17,24 @@
                 <Setter Property="FontWeight" Value="Bold"/>
             </Style>
         </StackPanel.Resources>
+        
         <Label Content="Сезоны" Foreground="Red"/>
-        <Label Content="10"/>
-        <Label Content="9"/>
-        <Label Content="8"/>
-        <Label Content="7" Foreground="GreenYellow"/>
-        <Label Content="6"/>
-        <Label Content="5"/>
-        <Label Content="4"/>
-        <Label Content="3"/>
-        <Label Content="2"/>
-        <Label Content="1"/>
+
+        <ListBox ItemsSource="{Binding Seasons}" 
+                 BorderThickness="0"
+                 ScrollViewer.VerticalScrollBarVisibility="Hidden"
+                 SelectedValue="{Binding SelectedSeason}">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel Orientation="Horizontal" IsItemsHost="True"/>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <Label Content="{Binding Number}" Foreground="Navy"/>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ListBox>
+
     </StackPanel>
 </UserControl>
