--- a/FoxFanDownloader/App.xaml
+++ b/FoxFanDownloader/App.xaml
@@ -1,8 +1,16 @@
 ﻿<Application x:Class="FoxFanDownloader.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:FoxFanDownloader">
+             xmlns:converters="clr-namespace:FoxFanDownloader.Infrastructure.Converters">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
+            <converters:BoolInverseConverter x:Key="BoolInverseConverter" />
+            
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Resources/Styles.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="pack://application:,,,/ToastNotifications.Messages;component/Themes/Default.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
